@@ -9,6 +9,7 @@ It also introduces a new approach to handling should expectations. See RELEASE-P
 
 It also sports myriad new features, bug fixes, patches and general goodness:
 
+* Applied [#8132] [PATCH] RSpec breaks "rake db:sessions:create" in a rails project that has the rspec_on_rails plugin (Patch from Erik Kastner)
 * Fixed [#8789] --line and --spec not working when the context has parenhesis in the name
 * Added [#8783] auto generate spec names from last expectation
 * --heckle now fails if the heckled class or module is not found.
